Modifico estructura basica y estilos

--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,45 @@
 @import url('https://fonts.googleapis.com/css2?family=Belanosima&family=Poppins&display=swap');
 
 :root{
-    --color-principal:var(#FC7300);
-    --color-secundario:var(#1F8A70);
-    --color-terciario:var(#00425A);
-    --color-texto:var(#181823);
-    --color-background:var(#EFF5F5);
+    --color-principal: #FC7300;
+    --color-secundario: #1F8A70;
+    --color-terciario: #00425A;
+    --color-texto: #181823;
+    --color-background: #EFF5F5;
 }
+/* header */
+header{
+    background-color: var(--color-secundario);
+    color: var(--color-background);
+    display: grid;
+}
+
+.logo{
+    font-family: "Belanosima", sans-serif;
+    font-size: 2.5rem;
+    color: var(--color-texto);
+    position: relative;
+}
+
+.titulo--untref{
+    font-family: "Poppins", sans-serif;
+}
+
+nav{
+    color: var(--color-background);
+    
+}
+
+a{
+    color: inherit;
+    text-decoration: none;
+}
+
+a:hover{
+    color: var(--color-terciario);
+}
+
+
 
 /* Diseño Responsive */
 
