--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,9 @@
     margin: 0;
 }
 
-h2 {
+h2,
+h4,
+h5 {
     font-family: "Belanosima", sans-serif;
     letter-spacing: 2px;
 }
@@ -25,7 +27,6 @@ header {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     place-items: center;
-    width: 100vw;
     height: 250px;
 }
 
@@ -81,7 +82,10 @@ a {
 }
 
 a:hover {
-    color: var(--color-terciario);
+    color: var(--color-texto);
+    background-color: var(--color-principal);
+    text-decoration: overline underline;
+    text-underline-offset: 8px;
 }
 
 a > img {
@@ -95,31 +99,73 @@ nav div img:hover,  /* header */
 
 /*  main section */
 
-main {
-    background-image: url(/img/pizarron.jpg);
+article {
+    background-image: url(/img/backgrounds/pizarron.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
-    display: grid;
-    justify-content: center;
+    padding: 40px;
+}
+.cards {
+    display: flex;
+    flex-flow: column wrap;
+    gap: 30px;
 }
 
-.card {
-    width: 90vw;
+.card,
+#card-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    outline: auto;
+    outline-color: lightgrey;
+    background-color: rgb(234, 233, 233);
+    background-clip: padding-box;
+}
+
+#card-header {
+    font-size: 1.1rem;
+    padding: 8px;
+}
+
+.card-body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: white;
-    color: var(--color-terciario);
-    border-radius: 4px;
-    margin: 10px;
+    outline: auto;
+    outline-color: lightgray;
+    padding: 0px 30px;
 }
 
-article section > h2,
-article section > p {
+.card-title {
+    font-size: 1.3rem;
+    margin: 20px;
+    text-decoration: underline;
+    text-underline-offset: 5px;
+}
+
+.card-text {
+    display: flex;
+    flex-flow: column wrap;
+    font-size: 1.1rem;
+    text-align: center;
+}
+
+.card-footer {
+    color: grey;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 40px;
+}
+
+.btn {
+    background-color: var(--color-secundario);
+    color: white;
     padding: 15px;
-}
-
-.subtitulo {
-    font-weight: 600;
-    font-style: italic;
-    font-size: 1.2rem;
+    border-radius: 30px 5%;
+    margin-top: 10px;
+    margin-bottom: 15px;
 }
 
 /* footer */
