--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,6 @@
     margin: 0;
 }
 
-h2,
 h4,
 h5 {
     font-family: "Belanosima", sans-serif;
@@ -99,12 +98,14 @@ nav div img:hover,  /* header */
 
 /*  main section */
 
-article {
+main {
     background-image: url(/img/backgrounds/pizarron.jpg);
+    background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
     padding: 40px;
 }
+
 .cards {
     display: flex;
     flex-flow: column wrap;
@@ -112,19 +113,19 @@ article {
 }
 
 .card,
-#card-header {
+#header-noticias {
     display: flex;
     flex-direction: column;
     align-items: center;
     outline: auto;
-    outline-color: lightgrey;
     background-color: rgb(234, 233, 233);
+    outline-color: lightgrey;
     background-clip: padding-box;
 }
 
+#header-noticias,
 #card-header {
-    font-size: 1.1rem;
-    padding: 8px;
+    padding: 12px;
 }
 
 .card-body {
@@ -134,12 +135,12 @@ article {
     background-color: white;
     outline: auto;
     outline-color: lightgray;
-    padding: 0px 30px;
+    padding: 20px 30px;
 }
 
 .card-title {
     font-size: 1.3rem;
-    margin: 20px;
+    padding: 20px 20px 25px;
     text-decoration: underline;
     text-underline-offset: 5px;
 }
