config redes y telefonos + new footer

--- a/css/contact-style.css
+++ b/css/contact-style.css
@@ -174,7 +174,7 @@ textarea {
     color: #000;
 }
 
-.copyright {
+#copyright {
     font: 200 14px "Belanosima", sans-serif;
     color: #555;
     letter-spacing: 1px;
