--- a/css/style.css
+++ b/css/style.css
@@ -25,9 +25,10 @@ p {
 /* header */
 header {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: 50% auto;
+    grid-template-rows: auto;
     place-items: center;
-    height: 250px;
+    height: 300px;
 }
 
 header,
@@ -73,7 +74,29 @@ footer .footer__ubicacion-logo span:last-child {
 /* navbar */
 
 .navbar {
-    grid-column: 3;
+    grid-column: 3/4;
+    font-size: 1.2rem;
+}
+
+ul {
+    list-style: none;
+    padding-inline-start: 0;
+}
+
+.items {
+    box-sizing: border-box;
+    margin: 10px;
+    text-align: left;
+    line-height: 35px;
+}
+
+.item-contacto {
+    text-align: center;
+    margin-top: 20px;
+}
+
+li > a {
+    padding: 5px;
 }
 
 a {
@@ -82,19 +105,9 @@ a {
 }
 
 a:hover {
-    color: var(--color-texto);
-    background-color: var(--color-principal);
+    background-color: var(--color-terciario);
     text-decoration: overline underline;
     text-underline-offset: 8px;
-}
-
-a > img {
-    width: 50px;
-}
-
-nav div img:hover,  /* header */
-.footer__redes a:hover /* footer */ {
-    filter: invert(80%);
 }
 
 /*  main section */
@@ -114,7 +127,7 @@ main {
 }
 
 .card,
-#header-noticias {
+#noticias {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -123,9 +136,10 @@ main {
     outline-color: lightgrey;
     background-clip: padding-box;
 }
-
-#header-noticias,
-#card-header {
+#nosotros,
+#motivos,
+#propuesta,
+#noticias {
     padding: 12px;
 }
 
@@ -162,7 +176,7 @@ main {
 }
 
 .btn {
-    background-color: var(--color-secundario);
+    background-color: var(--color-principal);
     color: white;
     padding: 15px;
     border-radius: 30px 5%;
